@@ -831,7 +831,7 @@ bool EventsMatch(const cEvent* event1, const cEvent* event2, bool compareTitle, 
 
    bool match = false;
    if ((!compareTitle || Title1 == Title2) &&
-       (!compareSubtitle || Subtitle1 == Subtitle2))
+       (!compareSubtitle || (Subtitle1 == Subtitle2 && Subtitle1!="")))
    {	
       const char* Descr1    = event1->Description();
       const char* Descr2    = event2->Description();
